[project]
name = "wavescribe"
version = "1.0.0-alpha.1"
description = "Annotate & correct word transcriptions and word timings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "ruff>=0.14.1",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]

